- fix long string in description that don't wrap - display back button only if user is coming from the website

--- a/public/styles/jobs.css
+++ b/public/styles/jobs.css
@@ -88,7 +88,7 @@ section.jobs-header {
 
 .__jobs_preview_card {
     /* width: 40%; */
-    min-height: 330px;
+    min-height: 100%;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     border: 1px solid #DCDCDC;
     border-radius: 0px 0px 70px 0px;
@@ -105,16 +105,7 @@ section.jobs-header {
 }
 
 .__jobs_preview_card button {
-    /* width: 130px; */
     align-self: flex-end;
-    /* margin-top: 18%; */
-}
-
-@media screen and (min-width: 425px) {
-    .__jobs_preview_card button {
-        position: absolute;
-        bottom: 21%;
-    }
 }
 
 .__jobs_preview_card .org {
@@ -564,16 +555,13 @@ input#phoneNumber[type=number] {
     color: var(--primary-main-pink);
 }
 
-@media screen and (min-width: 426px) and (max-width: 768px) {
+@media screen and (min-width: 320px) and (max-width: 425px) {
     .jobs-detail-container {
-        width: 90%;
+        width: 100%;
         height: 100vh;
     }
 }
 
-@media screen and (min-width: 769px) {
-    .jobs-detail-container {
-        width: 70%;
-        height: 100vh;
-    }
+.break-word-overflow {
+    overflow-wrap: break-word;
 }
